--- a/skin/main.css
+++ b/skin/main.css
@@ -7,7 +7,7 @@ color:#444;
 font-family:"Arial", "sans-serif";
 font-size:14px;
 margin:0;
-text-align:center;
+padding: 0;
 }
 
 
@@ -44,15 +44,14 @@ background-color: #999;
 
 */
 
-
+body.admin {
+background-color:#FAFAFA;
+}
 
 #wrapper {
-background-color:#FAFAFA;
-border:1px solid #A1A1A1;
-margin:1px auto 1em auto;
-padding:8px 18px;
+margin:0 auto;
 text-align:left;
-max-width:650px;
+max-width:640px;
 }
 
 #summary {
@@ -171,21 +170,21 @@ text-align:right;
 }
 
 #body h2 {
-color:#367EA6;
-font-size:20px;
-padding:10px 0 5px;
+  font-weight: bold;
+font-size:2.5rem;
+margin: 0;
+margin-top: 1.5rem;
+margin-bottom: 2rem;
 }
 
 #body h3 {
-border-bottom:1px solid #367EA6;
-color:#367EA6;
+border-bottom:1px solid #999;
 font-size:16px;
 padding:5px;
 }
 
 #body h4,#body h2.calender {
 border-left:solid 5px #367EA6;
-color:#367EA6;
 font-size:14px;
 padding:5px;
 }
@@ -310,8 +309,6 @@ text-align:center;
 }
 
 #footer {
-background-color:#fff;
-border:1px solid #eee;
 color:#666;
 margin:0;
 padding:5px 0;
@@ -452,9 +449,6 @@ text-decoration:underline;
 }
 
 #wrap_content {
-background-color:#FFF;
-border:1px solid #EEE;
-margin-top:8px;
 overflow:hidden;
 width:100%;
 }
@@ -473,7 +467,7 @@ vertical-align:middle;
 
 #content {
 border:none;
-padding:0 15px;
+padding:0 16px;
 }
 
 #lastmodified {
@@ -492,10 +486,6 @@ line-height:1em;
 
 #body h1 {
 margin:5px 0;
-}
-
-#body h2 {
-margin:10px 0 5px;
 }
 
 #body h3 {
@@ -878,7 +868,7 @@ width:3.5em;
 }
 
 div.contents ul {
-margin:7px 0 15px;
+margin:8px 0 16px;
 }
 
 table.toc {
@@ -1212,7 +1202,12 @@ width: 260px;
   flex-direction: column;
   gap: 20px;
 }
+.setting__category-name {
+  font-weight: bold;
+  padding: 0 16px 6px;
+}
 #setting__list ul {
+  background-color: #fff;
   margin: 0;
   padding: 0;
   list-style: none;
