--- a/skin/hokukenstyle/qhm.css
+++ b/skin/hokukenstyle/qhm.css
@@ -212,7 +212,7 @@ div.other_plugin{
 	border-top:1px solid #ccc;
 	border-left:1px solid #ccc;
 	border-bottom:1px solid #ccc;
-	background:transparent url('../../image/admin_bg.png');
+	background-color: rgba(0,0,0,0.6);
 	text-align:center;
 	box-sizing: content-box;
 }
