「編集ボックスへ」を削除 editboxlink, EDITBOX_LINKを削除 パフォーマンスの改善のリファクタ ブログ閉鎖のメッセージ修正

--- a/plugin/qblog/qblog.css
+++ b/plugin/qblog/qblog.css
@@ -19,6 +19,12 @@ margin: 10px 0;
 #qblog_list {
 /* 	background-color: red; */
 }
+.qblog_closed_message {
+  margin-block: 16px;
+  background-color: #ffecec;
+  border: 2px solid #ff8f8f;
+  border-radius: 16px;
+}
 .qblog-list .pagination li a{
   font-size: 12px;
 }
