--- a/skin/main.css
+++ b/skin/main.css
@@ -302,12 +302,6 @@ padding:7px 0 5px 5px;
 text-align:left;
 }
 
-#toolbar {
-font-size:11px;
-padding:3px 0;
-text-align:center;
-}
-
 #footer {
 color:#666;
 margin:0;
@@ -467,7 +461,7 @@ vertical-align:middle;
 
 #content {
 border:none;
-padding:0 16px;
+padding: 16px;
 }
 
 #lastmodified {
@@ -1218,6 +1212,11 @@ width: 260px;
 #setting__list li {
   border-bottom: 1px solid #333;
 }
+#setting__list li.limited {
+  padding: 12px 16px;
+  background-color: #ececec;
+  opacity: 0.6;
+}
 #setting__list li:last-child {
   border-bottom: none;
 }
@@ -1333,4 +1332,8 @@ span.icon:before {
 }
 .icon__logout:before {
   background-image: url('../image/icons/Logout.png');
+}
+
+.qhmsetting__source_code {
+  margin-top: 16px;
 }
