--- a/skin/main.css
+++ b/skin/main.css
@@ -483,11 +483,11 @@ margin:5px 0;
 }
 
 #body h3 {
-margin:15px 0 3px;
+margin: 15px 0 10px 0px;
 }
 
 #body h4 {
-margin:10px 0 0 3px;
+margin:10px 0 10px 0;
 }
 
 #body ul {
