qblogのテンプレートがskin内にある場合は利用する

--- a/skin/hokukenstyle/haik_bud/sass/_colors.scss
+++ b/skin/hokukenstyle/haik_bud/sass/_colors.scss
@@ -1,6 +1,7 @@
 :root {
   --bg-color: #fefefe;
   --text-color: #333;
+  --text-sub-color: #8a8a8a;
   --surface-color: #FFFFFF;
   --eyecatch-color: #353a3d;
   --hover-color: #999;
