--- a/skin/hokukenstyle/haik_bud/sass/_common.scss
+++ b/skin/hokukenstyle/haik_bud/sass/_common.scss
@@ -26,7 +26,7 @@ a {
     font-size: 0.8rem;
   }
 }
-.haik-content {
+.content {
   letter-spacing: 0.05rem;
   font-size: 1.125rem;
   h2 {
@@ -52,7 +52,7 @@ a {
     margin-block-start: 0;
   }
   p {
-    line-height: 2em;
+    line-height: 1.7em;
     margin-block-end: 2em;
   }
   ul {
