--- a/skin/hokukenstyle/haik_bud/sass/_qblog.scss
+++ b/skin/hokukenstyle/haik_bud/sass/_qblog.scss
@@ -18,6 +18,7 @@
     @include MinWidth-SM {
       flex-direction: column-reverse;
       border-bottom: none;
+      gap: 8px;
     }
   }
   .post_link {
@@ -165,3 +166,52 @@
   }
 }
 
+.wrap_qblog_comment_form {
+  font-size: 0.9rem;
+  background-color: var(--surface-color);
+  padding: 1.5em;
+  border-radius: 1.5em;
+  input, textarea {
+    border-color: var(--border-color);
+    border-radius: 4px;
+  }
+}
+
+.content {
+  h3.qblog_comment_list_title {
+    font-size: 1.2rem;
+    font-weight: bold;
+  }
+}
+ul#qblog_comment_list {
+  margin: 0;
+}
+.qblog_comment_list {
+  font-size: 0.9rem;
+}
+.qblog_comment_list_item {
+  .qblog_comment_header {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+  .qblog_comment_id {
+    word-break: keep-all;
+    letter-spacing: -1px;
+  }
+  .qblog_comment_title {
+    font-weight: bold;
+    font-size: 1.1em;
+  }
+  .qblog_comment_meta {
+    display: flex;
+    flex-direction: row;
+    justify-content: start;
+    align-items: center;
+    gap: 12px;
+    color: var(--text-sub-color);
+  }
+  .qblog_comment_body {
+    padding-block: 1em;
+  }
+}
