ブログ一覧、ブログ詳細の調整

--- a/skin/hokukenstyle/haik_bud/sass/_colors.scss
+++ b/skin/hokukenstyle/haik_bud/sass/_colors.scss
@@ -45,6 +45,7 @@
     --surface-color: #2e3134;
     --eyecatch-color: #353a3d;
     --hover-color: #c7c7c7;
+    --current-page-bg-color: #5e5e5e;
     --link-color: #f4f4f4;
     --active-bg-color: #434343;
     --border-color: #656565;
